--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,7 +4,7 @@
 %table#movies
   %thead
     %tr
-      %th= link_to "Movie Title", "application#title"
+      %th= link_to "Movie Title", method: :title
       %th Rating
       %th Release Date
       %th More Info
