--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,9 +4,9 @@
 %table#movies
   %thead
     %tr
-      %th= link_to "Movie Title", method: :title
+      %th{:id => 'title_header', :class => helper_class('title')}= link_to "Movie Title", movies_path(:sort=>'title', :ratings =>params[:ratings])
       %th Rating
-      %th Release Date
+      %th{:id => 'release_date_header', :class => helper_class('release')}= link_to "Release Date", movies_path(:sort=>'release', :ratings =>params[:ratings])
       %th More Info
   %tbody
     - @movies.each do |movie|
