--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,7 +4,7 @@
 %table#movies
   %thead
     %tr
-      %th= link_to "Movie Title", movies_path(:sort=>'title')
+      %th= link_to "Movie Title", :controller => :movies, :sort => 'title'
       %th Rating
       %th= link_to "Release Date", movies_path(:sort=>'release')
       %th More Info
