--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -6,7 +6,7 @@
     %tr
       %th{:class => hilite_helper('title')}= link_to "Movie Title", :controller => :movies, :sort => 'title'
       %th Rating
-      %th= link_to "Release Date", movies_path(:sort=>'release')
+      %th= {:class => hilite_helper('release')}= link_to "Release Date", :controller => :movies, :sort => 'release'
       %th More Info
   %tbody
     - @movies.each do |movie|
